--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 <body>
     <nav>
         <div class="logo">
-            <h4><img id="logo-img" src="./img/logo.jpg" alt="">logo</h4>
+            <h4><img id="logo-img" src="./img/logo.jpg" alt="">Portfolio</h4>
         </div>
         <ul class="navbar">
             <li><a href="#">HOME</a></li>
             <li><a href="#">WORK</a></li>
-            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">NOTES</a></li>
         </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </nav>
 </body>
 </html>
