assignment and lessons

--- a/assignment.html
+++ b/assignment.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment</title>
     <link rel="stylesheet" href="./style.css" />
-    <title>Portfolio</title>
+    <style>
+      .button {
+        width: 80%;
+      }
+    </style>
   </head>
   <body>
     <nav>
@@ -15,7 +20,7 @@
 
       <ul class="nav-links">
         <li>
-          <a href="#">HOME</a>
+          <a href="./index.html">HOME</a>
         </li>
         <li>
           <a href="#">ABOUT</a>
@@ -37,6 +42,15 @@
         <div class="line3"></div>
       </div>
     </nav>
+    <form action="./assignment1.html">
+      <input type="submit" value="assignment1" />
+    </form>
+    <!-- <form action="./assignment2.html">
+        <input type="submit" value="assignment2">
+    </form>
+    <form action="./assignment3.html">
+        <input type="submit" value="assignment3">
+    </form> -->
     <script src="./app.js"></script>
   </body>
 </html>
