--- a/projectLanding.html
+++ b/projectLanding.html
@@ -191,21 +191,25 @@
     <button class="todo-btn">
       <a href="./jsp/project1.html">Project #1</a>
     </button>
-    <br>
+    <br />
     <button class="flashcard-btn">
       <a href="./jsp2/project1.html">Project #2</a>
     </button>
-    <br>
+    <br />
     <button class="lp-btn">
       <a href="./Landing Page/lp.html">Project #3</a>
     </button>
-    <br>
+    <br />
     <button class="expense-btn">
       <a href="./Expense/index.html">Project #4</a>
     </button>
-    <br>
+    <br />
     <button class="imgSlider">
       <a href="./ImageSlider/index.html">Project #5</a>
+    </button>
+    <br />
+    <button class="newFolder">
+      <a href="./New folder/index.html">Project #6</a>
     </button>
   </body>
 </html>
