--- a/New folder/index.html
+++ b/New folder/index.html
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarMenu">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a href="#" class="nav-link">First</a>
+              <a href="../index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Second</a>
