--- a/jsp2/project1.html
+++ b/jsp2/project1.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <link rel="stylesheet" href="./css/all.css" />
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/fontawesome.css" />
@@ -12,25 +14,34 @@
     <title>FlashCards</title>
   </head>
   <body>
+    <button>
+      <a href="../index.html">Home</a>
+    </button>
     <button id="clear" class="clear btn">
       <i class="fas fa-trash">Clear Cards</i>
     </button>
+
     <h1>
       Flash Cards
       <button id="show" class="btn btn-small">
         <i class="fas fa-plus">Add New Card</i>
       </button>
     </h1>
+
     <div id="cards-container" class="cards"></div>
+
     <div class="navigation">
       <button id="prev" class="nav-button">
         <i class="fas fa-arrow-left"></i>
       </button>
+
       <p id="current"></p>
+
       <button id="next" class="nav-button">
         <i class="fas fa-arrow-right"></i>
       </button>
     </div>
+
     <div id="add-container" class="add-container">
       <h1>
         Add New Card
@@ -46,10 +57,12 @@
         <label for="answer">Answer</label>
         <textarea id="answer" placeholder="Your answer.."></textarea>
       </div>
+
       <button id="add-card" class="btn">
-        <i class="fas fa-plus">Add Card</i>
+        <i class="fas fa-plus"></i>Add Card
       </button>
     </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
